# limesqueezer

./: .bumpversion.cfg  .cookiecutterrc  .gitignore  .pre-commit-config.yaml  API.py  AUTHORS.rst  CHANGELOG.rst  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  README3.rst  __main__.py  badges.rst  dependencies.txt  dependencies_dev.txt  example.py  examples.py  mypy.ini  notes.md  plotters.py  profile.pstats  pyproject.toml  sandbox.py  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: publish_candidate.yaml  publish_main.yaml  tests.yaml
dependencies/: requirements.txt  requirements_build.txt  requirements_dev.txt
droot/: API.py  __main__.py  sandbox.py
limesqueezer/: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  setup.cfg  setup.py
limesqueezer/src/limesqueezer/: __init__.py  cli.py  plotters.py
limesqueezer/tests/: test_limesqueezer.py
profiling/: profile.pstats
readme/: .changelog.md  readme.py
reference/: API.py
reference/data/: poly2_LSQ10.csv  sine_LSQ10.csv
src/limesqueezer/: API.py  CLI.py  GLOBALS.py  _API.py  __init__.py  __main__.py  auxiliaries.py  benchmark.py  cli.py  errorfunctions.py  example.py  examples.py  f2zero.py  models.py  plotters.py  profile.py  root.py  tests.py
src/limesqueezer/reference/: API.py
src/limesqueezer/reference/data/: poly1.csv
src/reference/: API.py
tests/: API.py  __main__.py  benchmarking.py  mypy.ini  profiling.py
tests/profiling/: no_numba.pstats  with_numba.pstats
tests/unittests/: pytest.ini  test_API.py  test_CLI.py  test_auxiliaries.py
