[build-system]
requires = [
    "setuptools>=64.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "limesqueezer"
description = "Lossy compression with controlled error tolerance for smooth data series"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topick :: Scientific/Engineering",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: Utilities",
]
authors = [
    { name = "Limespy" },
]
requires-python = ">=3.10"
readme = "README.md"
version = "1.0.13"
dynamic = [
    "dependencies",
    "optional-dependencies",
]

[project.scripts]
limesqueezer = "limesqueezer:main"

[project.urls]
Homepage = "https://github.com/Limespy/limesqueezer"
Changelog = "https://github.com/Limespy/limesqueezer/blob/main/README.md#Changelog"
"Issue Tracker" = "https://github.com/Limespy/limesqueezer/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic.dependencies]
file = [
    "dependencies/requirements.txt",
]

[tool.setuptools.dynamic.optional-dependencies.dev]
file = "dependencies/requirements_dev.txt"

[tool.setuptools.dynamic.optional-dependencies.build]
file = "dependencies/requirements_build.txt"

[tool.setuptools.packages.find]
where = [
    "src",
]
